tests/script_errors/pp_cyclic/error.txt
Error: 
    1 | use `script` as s;
      | ^^^^^^^^^^^^^^^^^  Cyclic dependency detected: tests/script_errors/pp_cyclic/script.tremor